# repo-save-manager

./: CHANGELOG.md  Cargo.toml  README.md  Taskfile.yml  build.rs  build_all_platforms.sh  dist-workspace.toml
src/: app.rs  constant.rs  controller.rs  crypt.rs  fs_util.rs  lib.rs  main.rs  model.rs  repo_save.rs  save_bundle.rs  view.rs
src/repo/: mod.rs  save.rs  utils.rs
src/rsm/: mod.rs  save_bundle.rs
src/ui/: central_pannel.rs  mod.rs  top_pannel.rs
wix/: main.wxs
