[package]
name = "rsm"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
base64 = "0.22.1"
cbc = { version = "0.1.2", features = ["alloc"] }
eframe = { version = "0.31.1", features = ["persistence", "serde"] }
egui = { version = "0.31.1", features = ["log"] }
flate2 = "1.1.1"
fs_extra = "1.3.0"
log = { version = "0.4.27", features = ["kv", "kv_std"] }
pbkdf2 = "0.12.2"
rfd = "0.15.3"
serde = "1.0.219"
serde_json = "1.0.140"
sha1 = "0.10.6"
tempfile = "3.19.1"
thiserror = "2.0.12"
walkdir = "2.5.0"
