[package]
name = "repo-save-manager"
version = "0.2.1"
edition = "2024"
license = "GPL-3.0-or-later"
readme = "README.md"
description = "A GUI application to manage R.E.P.O. save files."
authors = ["Bruno Robert <bruno.jeanluke@icloud.com>"]
homepage = "https://github.com/bruno-robert/repo-save-manager"
repository = "https://github.com/bruno-robert/repo-save-manager"
keywords = ["application", "save", "game", "tool", "repo"]
categories = ["config", "filesystem"]
exclude = [".github/*", "LICENSE"]

[dependencies]
aes = "0.8.4"
base64 = "0.22.1"
cbc = { version = "0.1.2", features = ["alloc"] }
directories-next = "2.0.0"
eframe = { version = "0.31.1", features = ["persistence", "serde"] }
egui = { version = "0.31.1", features = ["log"] }
flate2 = "1.1.1"
fs_extra = "1.3.0"
log = { version = "0.4.27", features = ["kv", "kv_std"] }
pbkdf2 = "0.12.2"
rfd = "0.15.3"
serde = "1.0.219"
serde_json = "1.0.140"
sha1 = "0.10.6"
tempfile = "3.19.1"
thiserror = "2.0.12"
walkdir = "2.5.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.bundle]
name = "R.E.P.O. Save Manager"
identifier = "rbr.robertbr.repo-save-manager"
icon = [
    "resources/icons/32x32.png",
    "resources/icons/128x128.png",
    "resources/icons/128x128@2x.png",
]
category = "utility"

[package.metadata.wix]
upgrade-guid = "06B5AC3F-7564-4634-8203-6AC5FC47043C"
path-guid = "2F491733-45C6-439B-B73D-4F7CA77F9488"
license = false
eula = false
